@@ -2,6 +2,9 @@ Sun Nov 26 00:02:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix adjacency
 	relations when reading non manifold meshes.
+	* src/org/jcae/mesh/amibe/ds/Vertex.java (getNeighboursNodes): Make
+	this method more efficient; its return value has been changed to
+	a Collection.
 
 Fri Nov 24 19:38:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
